fixed dark mode

--- a/css/dark.css
+++ b/css/dark.css
@@ -600,6 +600,10 @@ body.dark-mode .light-mode-svg {
 
 /* About Page ----------------------------------------------- */
 
+body.dark-mode #about-contact:before {
+    background: #000;
+}
+
 body.dark-mode #page-header:before {
     background: rgba(0, 7, 66, 0.9) !important;
     background: -o-linear-gradient(305deg, rgba(0,16,153,.5) 0%, rgba(58,217,255,5) 96%);
